[project]
name = "takeout-tool-core"
version = "0.1.0"
description = "Python parsing engine for Takeout Tool (Pyodide compatible)"
requires-python = "==3.12.*"
dependencies = [
    "hjson>=3.1.0",
    "json5>=0.9.25",
    "pyyaml>=6.0.1",
    "regex>=2024.5.15",
    "aiohttp>=3.9.5",
    "tenacity>=8.3.0",
    "rich==13.7.1",
    "exrex>=0.11.0",
    "typer==0.9.0",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.2",
    "pytz>=2024.1",
    "packaging>=24.0",
    "ua-extract-purepy",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.18",
]

[tool.uv.sources]
ua-extract-purepy = { path = "UA-Extract-purepy", editable = true }
